# ray-serve-onnx

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: embedding_inference.py
