[tool.poetry]
name = "ray-serve-onnx"
version = "0.1.0"
description = ""
authors = ["Jon Gill <gilljon212@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
huggingface-hub = "^0.27.1"
onnx = "^1.17.0"
onnxruntime = "^1.20.1"
ray = { extras = ["serve"], version = "^2.40.0" }
transformers = "^4.48.0"


[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
